lots of updates from Cursor

--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -33,7 +33,7 @@
           <li class="pure-menu-item"> <a href="logout" class="pure-menu-link">Logout</a> </li>
           <li class="pure-menu-item"> <a href="?page=help.html" class="pure-menu-link">Help</a> </li>
           <li class="pure-menu-item">
-            <a href="https://github.com/Harvard-csci-e-11/spring26" class="pure-menu-link">Github</a>
+            <a href="{{ GITHUB_REPO_URL }}" class="pure-menu-link">Github</a>
           </li>
         </ul>
       </div>
