mocking cleaned up; tests fixed

--- a/etc/e11-cli/lambda-home/src/home_app/templates/about.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<!-- template: about.html -->
 <h1>About CSCI E-11</h1>
 <p>This should be filled in</p>
 {% endblock content %}
