--- a/etc/e11-cli/lambda-home/src/home_app/templates/help.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/help.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<!-- template: help.html -->
 <h1>Help</h1>
 
 <p>Please refer to our git repo at <a href='{{ GITHUB_REPO_URL }}/'>{{ GITHUB_REPO_URL }}/</a>.</p>
