--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -29,7 +29,7 @@
             <a href="?page=about.html" class="pure-menu-link">About</a>
           </li>
           <li class="pure-menu-item"> <a href="?page=terms.html" class="pure-menu-link">Terms</a> </li>
-          <li class="pure-menu-item"> <a href="?page=privacy.html" class="pure-menu-link">Terms</a> </li>
+          <li class="pure-menu-item"> <a href="?page=privacy.html" class="pure-menu-link">Privacy</a> </li>
           <li class="pure-menu-item"> <a href="logout" class="pure-menu-link">Logout</a> </li>
           <li class="pure-menu-item"> <a href="?page=help.html" class="pure-menu-link">Help</a> </li>
           <li class="pure-menu-item">
