--- a/etc/e11-cli/lambda-home/src/home_app/templates/terms.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/terms.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<!-- template: terms.html -->
 <h1>Terms of Service</h1>
 <p>This site was created by Simson Garfinkel for use in Harvard CSCI E-11.</p>
 <p>When used in conjunction with a course at Harvard University, this website is covered by the
