--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -121,7 +121,7 @@
     {% endfor %}
   </tbody>
 </table>
-<p>All times in {{ timezone_display }}.</i></p>
+<p>All times in {{ timezone_display }}.</p>
 <p><i>Note: Once a session is created from a specific IP address, it can be used from any IP address. This is required to allow users to transition between Wi-Fi access points or from Wi-Fi to cellular networks.</i></p>
 
 
