lab7 and lab8 grader

--- a/etc/e11-cli/lambda-leaderboard/src/leaderboard_app/templates/leaderboard.html
+++ b/etc/e11-cli/lambda-leaderboard/src/leaderboard_app/templates/leaderboard.html
@@ -65,6 +65,7 @@
     <div id='last-update'></div>
     <div id='next-update'></div>
     <p>Your IP address is {{ip_address}}.</p>
+    <p>Leaderboard version {{ __version__ }} deployed at {{ DEPLOYMENT_TIMESTAMP }}</p>
 </body>
 <script>
     // This is the JavaScript Leaderboard client.
