fixed crashing bug in dashboard.

--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -72,9 +72,13 @@
     </th>
     <th class="fail_names">
       <ul>
+        {% if grade.fail_names is iterable and grade.fail_names is not string %}
         {% for name in grade.fail_names %}
         <li> {{ name }} </li>
         {% endfor %}
+        {% else %}
+        <li> {{ grade.fail_names }} </li>
+        {% endif %}
       </ul>
     </th>
   </tr>
