--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -140,7 +140,7 @@
   <div class="claims-modal-content">
     <div class="claims-modal-header">
       <h4>Claims</h4>
-      <button type="button" class="claims-modal-close">&times;</button>
+      <button type="button" class="claims-modal-close">×</button>
     </div>
     <pre class="claims-modal-body"><code id="claims-json"></code></pre>
   </div>
