--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -27,7 +27,7 @@
 </table>
 
 <h3>Grades</h3>
-<p><i>Note: Only the highest grade for each lab is recorded in Canvas.</i></p>
+<p><i>Note: Canvas grades are updated once a week. Only the highest grade for each lab is recorded in Canvas.</i></p>
 <p><label><input type="checkbox" id="show-all-grades"> Show all grades</label></p>
 <table class="pure-table grades-table">
   <thead>
