--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -46,7 +46,7 @@
 
     <div class="footer">
       <div class="pure-u-1 u-sm-1-2">
-        <p id="copyright" class="legal-license">Copyright © 2024-2025 Simson L. Garfinkel <a href="?page=terms.html">[terms]</a>
+        <p id="copyright" class="legal-license">Copyright © 2024-2026 Simson L. Garfinkel (v{{ version }}) <a href="?page=terms.html">[terms]</a>
           | <a href="https://harvard.service-now.com/ithelp?id=kb_article&sys_id=9d718485db0d57cc83a2f3f7bf961902">
             Harvard’s Acceptable Use Policy </a>
           | <a href="https://accessibility.harvard.edu/"> Harvard Accessibility </a>
